--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,12 @@ $white: #fff;
   }
 }
 
+@mixin phone-only {
+  @media (max-width: 350px) {
+    @content;
+  }
+}
+
 html {
   margin: 0;
   padding: 0;
@@ -34,7 +40,7 @@ html {
 
 body {
   min-width: 320px;
-  max-width: 960px;
+  max-width: 768px;
   margin: 0 auto;
   padding: 32px;
   background: $bg-color;
@@ -50,9 +56,10 @@ body {
 
 .logo--header {
   font-size: 0;
-  width: 334px; height: 80px;
+  width: 256px; height: 62px;
   background: url(/images/logo_lrg.png) no-repeat;
-  background-size: 334px 80px;
+  background-size: 256px 62px;
+  background-size: fit;
   @include retina {
     background-image: url(/images/logo_lrg@2x.png);
   }
@@ -92,13 +99,13 @@ a {
   margin-bottom: 16px;
 }
 
-.video { 
-  display: inline-block;
+.video {   
   padding-bottom: 16px;
-  @include desktop {
-    width: 33%;
-    padding-right: 8px;
-  }
+  // @include desktop {
+  //   display: inline-block;
+  //   width: 32.5%;
+  //   padding-right: 8px;
+  // }
 } 
 
 .video-name {
