--- a/views/video.jade
+++ b/views/video.jade
@@ -3,4 +3,4 @@ extends ./layout.jade
 block content
 	h1= video.name
 	div.video-player
-		iframe(src='//player.vimeo.com/video/'+video.id+'?title=0&byline=0&portrait=0', frameborder='0', webkitallowfullscreen='', mozallowfullscreen='', allowfullscreen='')
+		iframe(src='//player.vimeo.com/video/'+video.id+'?title=0&byline=0&portrait=0&autoplay=1', frameborder='0', webkitallowfullscreen='', mozallowfullscreen='', allowfullscreen='')
