--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,9 @@
+/***********************************************************************
+Vars & Mixins
+************************************************************************/
+/***********************************************************************
+General
+************************************************************************/
 * {
   box-sizing: border-box; }
   *:focus {
@@ -12,16 +18,80 @@ body {
   min-width: 320px;
   max-width: 980px;
   margin: 0 auto;
-  padding: 32px;
   background: #A3937D;
   font-family: 'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
   color: #402A27; }
 
+a {
+  color: #402A27; }
+
+select {
+  padding: 4px 8px;
+  line-height: 1;
+  padding-right: 48px;
+  border-radius: 0;
+  border: 1px solid #402A27;
+  background: #402A27;
+  color: #fff;
+  width: 100%;
+  appearance: normal;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 0.01px;
+  text-overflow: '';
+  -moz-user-focus: ignore;
+  text-indent: 0.01px;
+  text-overflow: ''; }
+  select::-ms-expand {
+    display: none; }
+  select:focus {
+    outline: none; }
+  select::-moz-focus-inner {
+    border: 0; }
+  select:hover {
+    border-color: #fff;
+    cursor: pointer; }
+  select:focus {
+    cursor: pointer;
+    border-color: #fff; }
+
+.gm-select {
+  position: relative;
+  display: inline-block;
+  width: 100%; }
+  @media (min-width: 480px) {
+    .gm-select {
+      width: 50%;
+      width: calc(50% - 8px); } }
+  @media (min-width: 768px) {
+    .gm-select {
+      width: 33.333%;
+      width: calc(33.333% - 8px); } }
+  .gm-select:after {
+    content: "";
+    pointer-events: none;
+    display: block;
+    border: 12px solid transparent;
+    border-top: 16px solid #A3937D;
+    position: absolute;
+    top: 10px;
+    right: 10px; }
+
+/***********************************************************************
+Header
+************************************************************************/
 .header {
-  margin-bottom: 32px;
-  text-decoration: none; }
+  display: block;
+  text-decoration: none;
+  margin: 16px; }
+  @media (min-width: 480px) {
+    .header {
+      margin: 16px; } }
+  @media (min-width: 768px) {
+    .header {
+      margin: 32px; } }
 
 .logo--header {
   font-size: 0;
@@ -40,6 +110,102 @@ body {
   font-weight: normal;
   text-transform: uppercase; }
 
+/***********************************************************************
+Content
+************************************************************************/
+/*---- Portfolio Index  -----*/
+.portfolio-selector-container {
+  margin: 16px; }
+  @media (min-width: 480px) {
+    .portfolio-selector-container {
+      margin: 16px; } }
+  @media (min-width: 768px) {
+    .portfolio-selector-container {
+      margin: 32px; } }
+  .portfolio-selector-container select {
+    font-size: 24px; }
+
+.portfolio-videos {
+  margin: 16px;
+  list-style-type: none; }
+  @media (min-width: 480px) {
+    .portfolio-videos {
+      margin: 16px; } }
+  @media (min-width: 768px) {
+    .portfolio-videos {
+      margin: 32px; } }
+
+.video-thumbnail {
+  padding-bottom: 8px;
+  text-decoration: none; }
+  @media (min-width: 480px) {
+    .video-thumbnail {
+      display: inline-block;
+      width: 50%;
+      padding-right: 8px; } }
+  @media (min-width: 768px) {
+    .video-thumbnail {
+      width: 33.333%; } }
+
+.video-name {
+  margin: 8px 0;
+  display: block;
+  color: #402A27; }
+
+.video-poster {
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  padding-bottom: 100%; }
+  .video-poster img {
+    display: none; }
+
+/*---- Video Detail  -----*/
+.video-controls {
+  margin: 16px; }
+  @media (min-width: 480px) {
+    .video-controls {
+      margin: 16px; } }
+  @media (min-width: 768px) {
+    .video-controls {
+      margin: 32px; } }
+  .video-controls h1 {
+    font-size: 24px;
+    font-weight: normal; }
+
+.video-player {
+  margin: 0;
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin-bottom: 32px; }
+  @media (min-width: 480px) {
+    .video-player {
+      margin: 16px; } }
+  @media (min-width: 768px) {
+    .video-player {
+      margin: 32px; } }
+  .video-player iframe, .video-player object, .video-player embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+/***********************************************************************
+Footer
+************************************************************************/
+.footer {
+  margin: 16px; }
+  @media (min-width: 480px) {
+    .footer {
+      margin: 16px; } }
+  @media (min-width: 768px) {
+    .footer {
+      margin: 32px; } }
+
 .logo--footer {
   font-size: 0;
   width: 167px;
@@ -55,56 +221,5 @@ body {
   text-transform: uppercase;
   line-height: 1.3;
   margin-bottom: 24px; }
-
-a {
-  color: #402A27; }
-
-.featured-videos {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 16px; }
-
-.video {
-  padding-bottom: 32px; }
-  @media (min-width: 480px) {
-    .video {
-      display: inline-block;
-      width: 50%;
-      padding-right: 8px; } }
-  @media (min-width: 768px) {
-    .video {
-      display: inline-block;
-      width: 32.5%;
-      padding-right: 8px; } }
-
-.video-name {
-  margin: 8px 0;
-  display: block;
-  text-decoration: none;
-  color: #402A27; }
-
-.video-poster {
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  padding-bottom: 100%; }
-  .video-poster img {
-    display: none; }
-
-.video-player {
-  margin: 0;
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-  margin-bottom: 32px; }
-  .video-player iframe, .video-player object, .video-player embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; }
 
 /*# sourceMappingURL=main.css.map */
