--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,11 @@
-// bower:scss
-// endbower
+/***********************************************************************
+Vars & Mixins
+************************************************************************/
 
 $bg-color: #A3937D;
 $brown: #402A27;
 $white: #fff;
-
-* {
-  box-sizing: border-box;
-  &:focus {outline: none; outline:0; }
-}
+$spacing-unit: 8px;
 
 @mixin retina {
   @media (-webkit-min-device-pixel-ratio: 2), 
@@ -39,6 +36,25 @@ $white: #fff;
   }
 }
 
+@mixin block-spacing {
+  margin: $spacing-unit*2;
+  @include phablet {
+    margin: $spacing-unit * 2;
+  }
+  @include desktop {
+    margin: $spacing-unit * 4;
+  }
+}
+
+/***********************************************************************
+General
+************************************************************************/
+
+* {
+  box-sizing: border-box;
+  &:focus {outline: none; outline:0; }
+}
+
 html {
   margin: 0;
   padding: 0;
@@ -48,7 +64,6 @@ body {
   min-width: 320px;
   max-width: 980px;
   margin: 0 auto;
-  padding: 32px;
   background: $bg-color;
   font-family:'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -56,99 +71,210 @@ body {
   color: $brown;
 }
 
-.header {
-  margin-bottom: 32px;
-  text-decoration: none;
-}
-
-.logo--header {
-  font-size: 0;
-  width: 256px; height: 62px;
-  background: url(/images/logo_lrg.png) no-repeat;
-  background-size: 256px 62px;
-  background-size: fit;
-  @include retina {
-    background-image: url(/images/logo_lrg@2x.png);
-  }
-}
-
-.tagline {
-  color: $white;
-  font-size: 14px;
-  font-weight: normal;
-  text-transform: uppercase;
-}
-
-.logo--footer {
-  font-size: 0;
-  width: 167px; height: 40px;
-  background: url(/images/logo_sm.png) no-repeat;
-  background-size: 167px 40px;
-  @include retina {
-    background-image: url(/images/logo_sm@2x.png);
-  }
-  margin-bottom: 24px;
-}
-
-.address,
-.contact {
-  text-transform: uppercase;
-  line-height: 1.3;
-  margin-bottom: 24px;
-}
-
 a {
   color: $brown;
 }
 
-.featured-videos {
-  list-style-type: none;
-  margin: 0; padding: 0;
-  margin-bottom: 16px;
+select { 
+  padding: $spacing-unit/2 $spacing-unit;
+  line-height: 1;
+  padding-right: $spacing-unit*6;
+  border-radius: 0;
+  border: 1px solid $brown;
+  background: $brown;
+  color: $white;
+  width: 100%;
+
+  // Hide the arrow
+  appearance: normal;
+  -webkit-appearance: none;
+  
+  // Hide the arrow on Firefox
+  // http://stackoverflow.com/questions/6787667/what-is-the-correct-moz-appearance-value-to-hide-dropdown-arrow-of-a-select#answer-18327666
+  -moz-appearance: none;
+  text-indent: 0.01px;
+  text-overflow: '';
+  
+  // Hide the arrow on IE
+  &::-ms-expand {
+      display: none;
+  }
+
+  -moz-user-focus:ignore;  
+  &:focus {
+      outline: none;
+  }
+  &::-moz-focus-inner {
+      border: 0;
+  }
+
+  text-indent:0.01px; 
+  text-overflow:'';
+
+  &:hover {
+    border-color: $white;
+    cursor:pointer;
+  }
+
+  &:focus {
+    cursor:pointer;
+    border-color: $white;
+  }
 }
 
-.video {   
-  padding-bottom: 32px;
+.gm-select {
+  position: relative;
+  display: inline-block;
+  width: 100%;
   @include phablet {
-    display: inline-block;
     width: 50%;
-    padding-right: 8px;
+    width: calc(50% - 8px);
   }
   @include desktop {
-    display: inline-block;
-    width: 32.5%;
-    padding-right: 8px;
+    width: 33.333%;
+    width: calc(33.333% - 8px);
   }
-} 
+  &:after {
+    content:"";
+    pointer-events:none; //so it doesn't block the select
+    display:block; 
+    border: 12px solid rgba(0, 0, 0, 0);
+    border-top: 16px solid $bg-color;
+    position: absolute;
+    top:10px; right:10px; 
+  }
+}
 
-.video-name {
-  margin: 8px 0;
+/***********************************************************************
+Header
+************************************************************************/
+
+.header {
   display: block;
   text-decoration: none;
-  color: $brown;
+  @include block-spacing;
 }
 
-.video-poster {
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  padding-bottom: 100%; //so that we maintain a square aspect ratio
-  img {
-    display: none;
+  .logo--header {
+    font-size: 0;
+    width: 256px; height: 62px;
+    background: url(/images/logo_lrg.png) no-repeat;
+    background-size: 256px 62px;
+    background-size: fit;
+    @include retina {
+      background-image: url(/images/logo_lrg@2x.png);
+    }
   }
+
+  .tagline {
+    color: $white;
+    font-size: 14px;
+    font-weight: normal;
+    text-transform: uppercase;
+  }
+
+/***********************************************************************
+Content
+************************************************************************/
+
+  /*---- Portfolio Index  -----*/
+
+  .portfolio-selector-container {
+    @include block-spacing;
+    select {
+      font-size: 24px;
+    }
+  }
+
+  .portfolio-videos {
+    @include block-spacing;
+    list-style-type: none;
+  }
+
+  .video-thumbnail {   
+    padding-bottom: $spacing-unit;
+    text-decoration: none;
+    @include phablet {
+      display: inline-block;
+      width: 50%;
+      padding-right: $spacing-unit;
+    }
+    @include desktop {
+      width: 33.333%;
+    }
+  } 
+
+  .video-name {
+    margin: 8px 0;
+    display: block;
+    color: $brown;
+  }
+
+  .video-poster {
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    padding-bottom: 100%; //so that we maintain a square aspect ratio
+    img {
+      display: none;
+    }
+  }
+
+  /*---- Video Detail  -----*/
+
+  .video-controls {
+    @include block-spacing;
+    h1 {
+      font-size: 24px;
+      font-weight: normal;
+    }
+  }
+
+  .video-player {
+    margin: 0;
+    @include phablet {
+      margin: $spacing-unit * 2;
+    }
+    @include desktop {
+      margin: $spacing-unit * 4;
+    }
+    position: relative; 
+    padding-bottom: 56.25%; //so that we maintain a 16:9 aspect ratio
+    height: 0; 
+    overflow: hidden; 
+    max-width: 100%; 
+    margin-bottom: 32px;
+    iframe, object, embed { 
+      position: absolute; 
+      top: 0; left: 0; 
+      width: 100%; height: 100%; 
+    }
+  }
+
+/***********************************************************************
+Footer
+************************************************************************/
+
+.footer {
+  @include block-spacing;
 }
 
-.video-player {
-  margin: 0;
-  position: relative; 
-  padding-bottom: 56.25%; //so that we maintain a 16:9 aspect ratio
-  height: 0; 
-  overflow: hidden; 
-  max-width: 100%; 
-  margin-bottom: 32px;
-  iframe, object, embed { 
-    position: absolute; 
-    top: 0; left: 0; 
-    width: 100%; height: 100%; 
+  .logo--footer {
+    font-size: 0;
+    width: 167px; height: 40px;
+    background: url(/images/logo_sm.png) no-repeat;
+    background-size: 167px 40px;
+    @include retina {
+      background-image: url(/images/logo_sm@2x.png);
+    }
+    margin-bottom: 24px;
   }
-}
+
+  .address,
+  .contact {
+    text-transform: uppercase;
+    line-height: 1.3;
+    margin-bottom: 24px;
+  }
+
+
