--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
     title Global Mechanic | Global Mechanic
     link(rel='stylesheet', type='text/css', href='//cloud.typography.com/712234/797102/css/fonts.css')
     link(rel='stylesheet', href='/styles/main.css')
+    script(type='text/javascript', src='/scripts/mousetrap.js')
   body
     a.header(href="/")
       h1.logo--header Global Mechanic
