--- a/views/video.jade
+++ b/views/video.jade
@@ -6,8 +6,25 @@ block content
 		- var videoName = video.name;
 			h1.video-name 
 				if ( currentPortfolioName ) 
-					a(href='/?portfolio='+currentPortfolioId)= currentPortfolioName
+					a(href='/?portfolio='+currentPortfolioId).video-portfolio= currentPortfolioName
 					span &nbsp;&gt;&nbsp;
 				span= video.name
+			if ( currentPortfolioName )
+				if ( prevVideoId )
+					a.prev-video(href='/videos/'+prevVideoId+'?portfolio='+currentPortfolioId) prev
+				span.video-count= currentVideoIndex+'/'+totalVideoCount
+				if ( nextVideoId )
+					a.next-video(href='/videos/'+nextVideoId+'?portfolio='+currentPortfolioId) next 
 	.video-player
 		iframe(src='//player.vimeo.com/video/'+video.id+'?title=0&byline=0&portrait=0&autoplay=1', frameborder='0', webkitallowfullscreen='', mozallowfullscreen='', allowfullscreen='')
+	script.
+		// prev video
+		Mousetrap.bind('left', function() { 
+			console.log('prev video');
+			window.location=document.getElementsByClassName('prev-video')[0].href;
+		});
+		// next video
+		Mousetrap.bind('right', function() { 
+			console.log('next video');
+			window.location=document.getElementsByClassName('next-video')[0].href;
+		});
