--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -240,9 +240,10 @@ Content
         color: $white;
       }
     }
-    .next {
-      
-    }
+  }
+
+  .video-count {
+    padding: $spacing-unit;
   }
 
   .video-player {
