--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -185,7 +185,14 @@ Content
       color: #fff; }
 
 .video-count {
-  padding: 8px; }
+  display: inline-block;
+  padding: 8px 0; }
+
+.next-video {
+  padding-left: 16px; }
+
+.prev-video {
+  padding-right: 16px; }
 
 .video-player {
   margin: 0;
