--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,15 +2,15 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    link(rel='icon', href='images/favicon.png', type='image/x-icon')
-    link(rel='shortcut icon', href='images/favicon.png', type='image/x-icon')
+    link(rel='icon', href='images/favicon.png?v=#{deployVersion}', type='image/x-icon')
+    link(rel='shortcut icon', href='images/favicon.png?v=#{deployVersion}', type='image/x-icon')
     meta(name='description', content='Global Mechanic is a design studio. We experiment. We create. We make beautiful things. We affect the way people think and see the world.')
     meta(name='keywords', content='film, art, commercial, animation, branding')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     title Global Mechanic | Global Mechanic
     link(rel='stylesheet', type='text/css', href='//cloud.typography.com/712234/797102/css/fonts.css')
-    link(rel='stylesheet', href='/styles/main.css')
-    script(type='text/javascript', src='/scripts/mousetrap.js')
+    link(rel='stylesheet', href='/styles/main.css?v=#{deployVersion}')
+    script(type='text/javascript', src='/scripts/mousetrap.js?v=#{deployVersion}')
   body
     a.header(href="/")
       h1.logo--header Global Mechanic
@@ -46,4 +46,3 @@ html
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-5743826-1', 'globalmechanic.com');
       ga('send', 'pageview');
-    script(src='/scripts/main.js')
