--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,11 +18,9 @@ html
     .content
       block content   
     .footer
-      h2.logo--footer
-        Global Mechanic
       div(itemscope='', itemtype='http://schema.org/LocalBusiness')
         .address
-          div(itemprop='name') Global Mechanic
+          div.logo--footer(itemprop='name') Global Mechanic
           div(itemtype='http://schema.org/PostalAddress', itemscope='', itemprop='address')
             div(itemprop='streetAddress') 300-341 Water Street
             div 3rd Floor
