--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -83,7 +83,8 @@ select {
   border: 1px solid $brown;
   background: $brown;
   color: $white;
-  width: 100%;
+  width: 110%;
+  font-family:'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
 
   // Hide the arrow
   appearance: normal;
@@ -108,21 +109,17 @@ select {
       border: 0;
   }
 
-  text-indent:0.01px; 
-  text-overflow:'';
-
   &:hover {
-    border-color: $white;
     cursor:pointer;
   }
 
   &:focus {
     cursor:pointer;
-    border-color: $white;
   }
 }
 
 .gm-select {
+  overflow: hidden;
   position: relative;
   display: inline-block;
   width: 100%;
@@ -141,7 +138,8 @@ select {
     border: 12px solid rgba(0, 0, 0, 0);
     border-top: 16px solid $bg-color;
     position: absolute;
-    top:10px; right:10px; 
+    top:50%; right:10px; 
+    margin-top: -7px;
   }
 }
 
