--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,6 +21,7 @@ body {
   background: #A3937D;
   font-family: 'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
   -webkit-font-smoothing: antialiased;
+  font-weight: 300;
   font-size: 16px;
   color: #402A27; }
 
@@ -37,6 +38,7 @@ select {
   color: #fff;
   width: 110%;
   font-family: 'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
+  font-weight: 300;
   appearance: normal;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -58,15 +60,8 @@ select {
   overflow: hidden;
   position: relative;
   display: inline-block;
-  width: 100%; }
-  @media (min-width: 480px) {
-    .gm-select {
-      width: 50%;
-      width: calc(50% - 8px); } }
-  @media (min-width: 768px) {
-    .gm-select {
-      width: 33.333%;
-      width: calc(33.333% - 8px); } }
+  width: 100%;
+  max-width: 401px; }
   .gm-select:after {
     content: "";
     pointer-events: none;
@@ -84,13 +79,16 @@ Header
 .header {
   display: block;
   text-decoration: none;
-  margin: 16px; }
+  margin: 16px;
+  margin-bottom: 0; }
   @media (min-width: 480px) {
     .header {
-      margin: 16px; } }
+      margin: 24px;
+      margin-bottom: 0; } }
   @media (min-width: 768px) {
     .header {
-      margin: 32px; } }
+      margin: 36px;
+      margin-bottom: 0; } }
 
 .logo--header {
   font-size: 0;
@@ -105,8 +103,8 @@ Header
 
 .tagline {
   color: #fff;
-  font-size: 14px;
-  font-weight: normal;
+  font-size: 16px;
+  font-weight: 300;
   text-transform: uppercase; }
 
 /***********************************************************************
@@ -114,33 +112,41 @@ Content
 ************************************************************************/
 /*---- Portfolio Index  -----*/
 .portfolio-selector-container {
-  margin: 16px; }
+  margin: 16px;
+  margin-bottom: 0; }
   @media (min-width: 480px) {
     .portfolio-selector-container {
-      margin: 16px; } }
+      margin: 24px;
+      margin-bottom: 0; } }
   @media (min-width: 768px) {
     .portfolio-selector-container {
-      margin: 32px; } }
+      margin: 36px;
+      margin-bottom: 0; } }
   .portfolio-selector-container select {
     font-size: 24px; }
 
 .portfolio-videos {
   margin: 16px;
+  margin-bottom: 0;
   list-style-type: none; }
   @media (min-width: 480px) {
     .portfolio-videos {
-      margin: 16px; } }
+      margin: 24px;
+      margin-bottom: 0; } }
   @media (min-width: 768px) {
     .portfolio-videos {
-      margin: 32px; } }
+      margin: 36px;
+      margin-bottom: 0; } }
 
 .video-thumbnail {
-  padding-bottom: 8px;
-  text-decoration: none; }
+  text-decoration: none;
+  display: block;
+  padding-bottom: 16px; }
   @media (min-width: 480px) {
     .video-thumbnail {
       display: inline-block;
       width: 50%;
+      padding-bottom: 28px;
       padding-right: 8px; } }
   @media (min-width: 768px) {
     .video-thumbnail {
@@ -161,16 +167,19 @@ Content
 
 /*---- Video Detail  -----*/
 .video-controls {
-  margin: 16px; }
+  margin: 16px;
+  margin-bottom: 0; }
   @media (min-width: 480px) {
     .video-controls {
-      margin: 16px; } }
+      margin: 24px;
+      margin-bottom: 0; } }
   @media (min-width: 768px) {
     .video-controls {
-      margin: 32px; } }
+      margin: 36px;
+      margin-bottom: 0; } }
   .video-controls h1 {
     font-size: 24px;
-    font-weight: normal; }
+    font-weight: 300; }
   .video-controls .video-portfolio {
     -webkit-transition: all .15s ease-in-out;
             transition: all .15s ease-in-out;
@@ -218,13 +227,18 @@ Content
 Footer
 ************************************************************************/
 .footer {
-  margin: 16px; }
+  margin: 16px;
+  margin-bottom: 0;
+  padding-bottom: 32px;
+  margin-top: 16px !important; }
   @media (min-width: 480px) {
     .footer {
-      margin: 16px; } }
+      margin: 24px;
+      margin-bottom: 0; } }
   @media (min-width: 768px) {
     .footer {
-      margin: 32px; } }
+      margin: 36px;
+      margin-bottom: 0; } }
 
 .logo--footer {
   font-size: 0;
@@ -236,6 +250,29 @@ Footer
   @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     .logo--footer {
       background-image: url(/images/logo_sm@2x.png); } }
+
+.human-logo {
+  font-size: 0;
+  display: inline-block;
+  width: 96px;
+  height: 96px;
+  background: url(/images/human_logo.png) no-repeat;
+  background-size: 96px 96px; }
+  @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .human-logo {
+      background-image: url(/images/human_logo@2x.png); } }
+
+.quini-logo {
+  margin-left: 8px;
+  font-size: 0;
+  display: inline-block;
+  width: 72px;
+  height: 96px;
+  background: url(/images/quini_logo.png) no-repeat;
+  background-size: 72px 96px; }
+  @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .quini-logo {
+      background-image: url(/images/quini_logo@2x.png); } }
 
 .address, .contact {
   text-transform: uppercase;
