--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,11 +38,14 @@ $spacing-unit: 8px;
 
 @mixin block-spacing {
   margin: $spacing-unit*2;
+  margin-bottom: 0;
   @include phablet {
-    margin: $spacing-unit * 2;
+    margin: $spacing-unit * 3;
+    margin-bottom: 0;
   }
   @include desktop {
-    margin: $spacing-unit * 4;
+    margin: $spacing-unit * 4.5;
+    margin-bottom: 0;
   }
 }
 
@@ -67,6 +70,7 @@ body {
   background: $bg-color;
   font-family:'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
   -webkit-font-smoothing: antialiased;
+  font-weight: 300;
   font-size: 16px;
   color: $brown;
 }
@@ -85,7 +89,7 @@ select {
   color: $white;
   width: 110%;
   font-family:'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
-
+  font-weight: 300;
   // Hide the arrow
   appearance: normal;
   -webkit-appearance: none;
@@ -123,14 +127,7 @@ select {
   position: relative;
   display: inline-block;
   width: 100%;
-  @include phablet {
-    width: 50%;
-    width: calc(50% - 8px);
-  }
-  @include desktop {
-    width: 33.333%;
-    width: calc(33.333% - 8px);
-  }
+  max-width: 401px;
   &:after {
     content:"";
     pointer-events:none; //so it doesn't block the select
@@ -166,8 +163,8 @@ Header
 
   .tagline {
     color: $white;
-    font-size: 14px;
-    font-weight: normal;
+    font-size: 16px;
+    font-weight: 300;
     text-transform: uppercase;
   }
 
@@ -190,11 +187,13 @@ Content
   }
 
   .video-thumbnail {   
-    padding-bottom: $spacing-unit;
     text-decoration: none;
+    display: block;
+    padding-bottom: $spacing-unit*2;
     @include phablet {
       display: inline-block;
       width: 50%;
+      padding-bottom: $spacing-unit*3.5;
       padding-right: $spacing-unit;
     }
     @include desktop {
@@ -224,7 +223,7 @@ Content
     @include block-spacing;
     h1 {
       font-size: 24px;
-      font-weight: normal;
+      font-weight: 300;
     }
     .video-portfolio {
       transition: all .15s ease-in-out;
@@ -280,6 +279,8 @@ Footer
 
 .footer {
   @include block-spacing;
+  padding-bottom: $spacing-unit*4;
+  margin-top: $spacing-unit*2 !important;
 }
 
   .logo--footer {
@@ -291,6 +292,29 @@ Footer
       background-image: url(/images/logo_sm@2x.png);
     }
     margin-bottom: 24px;
+  }
+
+  .human-logo {
+    font-size: 0;
+    display: inline-block;
+    width: 96px; height: 96px;
+    background: url(/images/human_logo.png) no-repeat;
+    background-size: 96px 96px;
+    @include retina {
+      background-image: url(/images/human_logo@2x.png);
+    }
+  }
+
+  .quini-logo {
+    margin-left: $spacing-unit;
+    font-size: 0;
+    display: inline-block;
+    width: 72px; height: 96px;
+    background: url(/images/quini_logo.png) no-repeat;
+    background-size: 72px 96px;
+    @include retina {
+      background-image: url(/images/quini_logo@2x.png);
+    }
   }
 
   .address,
