--- a/views/layout.jade
+++ b/views/layout.jade
@@ -37,6 +37,11 @@ html
             a(href='mailto:studio@globalmechanic.com') studio@globalmechanic.com
           div Liz Laine Reps | USA +1 (312) 329 1111
           div Hestyreps | Canada +1 (416) 482 0411
+        .other-companies
+          p We're part of a group of companies:
+          div 
+            a(href='http://ishuman.co').human-logo HUMAN
+            a(href='http://quiniwine.com').quini-logo Quini
     script(type='text/javascript').
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
