--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -203,7 +203,7 @@ Content
   padding-right: 16px; }
 
 .video-player {
-  margin: 0;
+  margin: 8px 0;
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
@@ -212,10 +212,10 @@ Content
   margin-bottom: 32px; }
   @media (min-width: 480px) {
     .video-player {
-      margin: 16px; } }
+      margin: 24px; } }
   @media (min-width: 768px) {
     .video-player {
-      margin: 32px; } }
+      margin: 36px; } }
   .video-player iframe, .video-player object, .video-player embed {
     position: absolute;
     top: 0;
