refactored style sheets and fixed up styling of private portfolio pages

--- a/views/private.jade
+++ b/views/private.jade
@@ -1,8 +1,8 @@
 extends ./layout.jade
 
 block content
-	h1 Private Portfolios (aka Reels)
-	.portfolio-videos
+	.private-portfolio-index
+		h1 Private Portfolios (aka Reels)
 		for portfolio in portfolios
 			h2 
 				a(href='/private/portfolio/'+portfolio.id)= portfolio.name
