--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,327 +1,6 @@
-/***********************************************************************
-Vars & Mixins
-************************************************************************/
-
-$bg-color: #A3937D;
-$brown: #402A27;
-$white: #fff;
-$spacing-unit: 8px;
-
-@mixin retina {
-  @media (-webkit-min-device-pixel-ratio: 2), 
-         (min--moz-device-pixel-ratio: 2), 
-         (-o-min-device-pixel-ratio: 2/1), 
-         (min-device-pixel-ratio: 2),
-         (min-resolution: 192dpi), 
-         (min-resolution: 2dppx) {
-    @content;
-  }
-}
-
-@mixin desktop {
-  @media (min-width: 768px) {
-    @content;
-  }
-}
-
-@mixin phablet {
-  @media (min-width: 480px) {
-    @content;
-  }
-}
-
-@mixin phone-only {
-  @media (max-width: 350px) {
-    @content;
-  }
-}
-
-@mixin block-spacing {
-  margin: $spacing-unit*2;
-  margin-bottom: 0;
-  @include phablet {
-    margin: $spacing-unit * 3;
-    margin-bottom: 0;
-  }
-  @include desktop {
-    margin: $spacing-unit * 4.5;
-    margin-bottom: 0;
-  }
-}
-
-/***********************************************************************
-General
-************************************************************************/
-
-* {
-  box-sizing: border-box;
-  &:focus {outline: none; outline:0; }
-}
-
-html {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  min-width: 320px;
-  max-width: 980px;
-  margin: 0 auto;
-  background: $bg-color;
-  font-family:'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  font-weight: 300;
-  font-size: 16px;
-  color: $brown;
-}
-
-a {
-  color: $brown;
-}
-
-select { 
-  padding: 6px $spacing-unit $spacing-unit/2;
-  line-height: 1;
-  padding-right: $spacing-unit*6;
-  border-radius: 0;
-  border: 1px solid $brown;
-  background: $brown;
-  color: $white;
-  width: 110%;
-  font-family:'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
-  font-weight: 300;
-  // Hide the arrow
-  appearance: normal;
-  -webkit-appearance: none;
-  
-  // Hide the arrow on Firefox
-  // http://stackoverflow.com/questions/6787667/what-is-the-correct-moz-appearance-value-to-hide-dropdown-arrow-of-a-select#answer-18327666
-  -moz-appearance: none;
-  text-indent: 0.01px;
-  text-overflow: '';
-  
-  // Hide the arrow on IE
-  &::-ms-expand {
-      display: none;
-  }
-
-  -moz-user-focus:ignore;  
-  &:focus {
-      outline: none;
-  }
-  &::-moz-focus-inner {
-      border: 0;
-  }
-
-  &:hover {
-    cursor:pointer;
-  }
-
-  &:focus {
-    cursor:pointer;
-  }
-}
-
-.gm-select {
-  overflow: hidden;
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  max-width: 401px;
-  &:after {
-    content:"";
-    pointer-events:none; //so it doesn't block the select
-    display:block; 
-    border: 12px solid rgba(0, 0, 0, 0);
-    border-top: 16px solid $bg-color;
-    position: absolute;
-    top:50%; right:10px; 
-    margin-top: -7px;
-  }
-}
-
-/***********************************************************************
-Header
-************************************************************************/
-
-.header {
-  display: block;
-  text-decoration: none;
-  @include block-spacing;
-}
-
-  .logo--header {
-    font-size: 0;
-    width: 256px; height: 62px;
-    background: url(/images/logo_lrg.png) no-repeat;
-    background-size: 256px 62px;
-    background-size: fit;
-    @include retina {
-      background-image: url(/images/logo_lrg@2x.png);
-    }
-  }
-
-  .tagline {
-    color: $white;
-    font-size: 16px;
-    font-weight: 300;
-    text-transform: uppercase;
-  }
-
-/***********************************************************************
-Content
-************************************************************************/
-
-  /*---- Portfolio Index  -----*/
-
-  .portfolio-selector-container {
-    @include block-spacing;
-    select {
-      font-size: 24px;
-    }
-  }
-
-  .portfolio-videos {
-    @include block-spacing;
-    list-style-type: none;
-  }
-
-  .video-thumbnail {   
-    text-decoration: none;
-    display: block;
-    padding-bottom: $spacing-unit*2;
-    @include phablet {
-      display: inline-block;
-      width: 50%;
-      padding-bottom: $spacing-unit*3.5;
-      padding-right: $spacing-unit;
-    }
-    @include desktop {
-      width: 33.333%;
-    }
-  } 
-
-  .video-name {
-    margin: 8px 0;
-    display: block;
-    color: $brown;
-  }
-
-  .video-poster {
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    padding-bottom: 100%; //so that we maintain a square aspect ratio
-    img {
-      display: none;
-    }
-  }
-
-  /*---- Video Detail  -----*/
-
-  .video-controls {
-    @include block-spacing;
-    h1 {
-      font-size: 24px;
-      font-weight: 300;
-    }
-    .video-portfolio {
-      transition: all .15s ease-in-out;
-      border: 1px solid $brown;
-      padding: 7px $spacing-unit $spacing-unit/2;
-      line-height: 1;
-      display: inline-block;
-      text-decoration: none;
-      &:hover {
-        background: $brown;
-        color: $white;
-      }
-    }
-  }
-
-  .video-count {
-    display: inline-block;
-    padding: $spacing-unit 0;
-  }
-
-  .next-video {
-    padding-left: $spacing-unit*2;
-  }
-
-  .prev-video {
-    padding-right: $spacing-unit*2; 
-  }
-
-  .video-player {
-    margin: $spacing-unit 0;
-    @include phablet {
-      margin: $spacing-unit * 3;
-    }
-    @include desktop {
-      margin: $spacing-unit * 4.5;
-    }
-    position: relative; 
-    padding-bottom: 56.25%; //so that we maintain a 16:9 aspect ratio
-    height: 0; 
-    overflow: hidden; 
-    max-width: 100%; 
-    margin-bottom: 32px;
-    iframe, object, embed { 
-      position: absolute; 
-      top: 0; left: 0; 
-      width: 100%; height: 100%; 
-    }
-  }
-
-/***********************************************************************
-Footer
-************************************************************************/
-
-.footer {
-  @include block-spacing;
-  padding-bottom: $spacing-unit*4;
-  margin-top: $spacing-unit*2 !important;
-}
-
-  .logo--footer {
-    font-size: 0;
-    width: 167px; height: 40px;
-    background: url(/images/logo_sm.png) no-repeat;
-    background-size: 167px 40px;
-    @include retina {
-      background-image: url(/images/logo_sm@2x.png);
-    }
-    margin-bottom: 24px;
-  }
-
-  .human-logo {
-    font-size: 0;
-    display: inline-block;
-    width: 96px; height: 96px;
-    background: url(/images/human_logo.png) no-repeat;
-    background-size: 96px 96px;
-    @include retina {
-      background-image: url(/images/human_logo@2x.png);
-    }
-  }
-
-  .quini-logo {
-    margin-left: $spacing-unit;
-    font-size: 0;
-    display: inline-block;
-    width: 72px; height: 96px;
-    background: url(/images/quini_logo.png) no-repeat;
-    background-size: 72px 96px;
-    @include retina {
-      background-image: url(/images/quini_logo@2x.png);
-    }
-  }
-
-  .address,
-  .contact {
-    text-transform: uppercase;
-    line-height: 1.3;
-    margin-bottom: 24px;
-  }
-
-
+@import 'base';
+@import 'layout';
+@import 'select';
+@import 'home';
+@import 'video';
+@import 'private-portfolios';
