--- a/views/private_portfolio.jade
+++ b/views/private_portfolio.jade
@@ -1,8 +1,11 @@
 extends ./layout.jade
 
 block content
-	h1= portfolio.name
-	for video in portfolio.videos
+	.portfolio-selector-container
+		h1= portfolio.name
+		p= portfolio.description
+	.portfolio-videos
+		for video in portfolio.videos
 			- var id = video.uri.split('/')[2];
 			//- grab the largest available image
 			- var image_uri = video.pictures.sizes[video.pictures.sizes.length-1].link;
