added function to reset Vimeo cache data

--- a/views/private.jade
+++ b/views/private.jade
@@ -2,6 +2,7 @@ extends ./layout.jade
 
 block content
 	.private-portfolio-index
+		a(href='?resetDataCache') Reset Vimeo Data
 		h1 Private Portfolios (aka Reels)
 		for portfolio in portfolios
 			h2 
