--- a/src/styles/_private-portfolios.scss
+++ b/src/styles/_private-portfolios.scss
@@ -3,12 +3,12 @@
 
 .private-portfolio-index {
 	@include block-spacing;
+	padding-bottom: $spacing-unit*2;
 	a {
 		font-weight: 300;
 		display: inline-block;
 		padding: $spacing-unit $spacing-unit $spacing-unit/2;
 		line-height: 1;
-		margin-bottom: $spacing-unit*2;
 		background: $brown;
 		color: $white;
 		text-decoration: none;
