--- a/views/layout.jade
+++ b/views/layout.jade
@@ -38,10 +38,11 @@ html
           div Liz Laine Reps | USA +1 (312) 329 1111
           div Hestyreps | Canada +1 (416) 482 0411
         .social
-          //- a(href='https://medium.com/globalmechanicmedia',target='_blank').social-link.social-link--medium Medium
           a(href='https://instagram.com/brucewgalcock',target='_blank').social-link.social-link--instagram Instagram
           a(href='https://twitter.com/globalmechanic',target='_blank').social-link.social-link--twitter Twitter
           a(href='https://vimeo.com/globalmechanicmedia',target='_blank').social-link.social-link--vimeo Vimeo
+          a(href='https://medium.com/globalmechanicmedia',target='_blank').social-link.social-link--medium Medium
+          //- a(href='https://medium.com/globalmechanicmedia',target='_blank').social-link.social-link--pinterest Pinterest
         .other-companies
           p We're part of a group of companies:
           div 
