--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -12,9 +12,7 @@ html {
 }
 
 body {
-  min-width: 320px;
-  max-width: 980px;
-  margin: 0 auto;
+  @include containing-block;
   background: $bg-color;
   font-family:'Gotham Narrow SSm A', 'Gotham Narrow SSm B', sans-serif;
   -webkit-font-smoothing: antialiased;
