--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -11,6 +11,19 @@
   }
 }
 
+@mixin containing-block {
+  min-width: 320px;
+  max-width: 980px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@mixin big-desktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
 @mixin desktop {
   @media (min-width: 768px) {
     @content;
