--- a/views/about.jade
+++ b/views/about.jade
@@ -3,15 +3,15 @@ block variables
 	- var body_class = 'about-page'
 block content
 	.about-content
-		a.about-header-image(href="video")
-			.about-header-gif
+		a.about-header-image(href="/videos/86731887?portfolio=357398")
+			.about-header-btn
 		.about-containing-block
 			.about-header
 				h1 Global Mechanic is a design studio.
 				h2 We experiment, we create, we make beautiful things 
 				h3 to affect how people think and see the world
 		.about-containing-block
-			p Founded in 2000 by Bruce Alcock, Global Mechanic has produced hundreds of hours of award-winning content for films, commercials, television series, digital media and art projects. Oscar and Emmy nominated, we’re well decorated in festival and ad circuits worldwide. 
+			p <a target="_blank" href="https://medium.com/@brucewgalcock/welcome-to-our-studio-70cb7a2c4430">Founded in 2000</a> by Bruce Alcock, Global Mechanic has produced hundreds of hours of award-winning content for films, commercials, television series, digital media and art projects. Oscar and Emmy nominated, we’re well decorated in festival and ad circuits worldwide. 
 		.about-studio-image
 		.about-containing-block
 			p With a core staff of seasoned creatives and producers, we hub and spoke to handle projects small and large. That makes us nimble, adaptive, and it saves us from getting set in our ways. It’s a studio culture of invention and collaboration, where change is expected. Welcome even. 
