--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -14,23 +14,6 @@
 }
 
 .about-page {
-	background: #E29F9F;
-	max-width: 100%;
-	.header {
-		@include about-containing-block;
-	}
-	.header-content {
-		@include block-spacing;
-	}
-	.footer {
-		@include about-containing-block;
-	}
-	.footer-content {
-		@include block-spacing;	
-	}
-}
-
-.about-containing-block {
 	@include about-containing-block;
 }
 
@@ -61,6 +44,7 @@
 	  	}
 	  	@include big-desktop {
 	    	font-size: 74px;
+	    	letter-spacing: -2px;
 	  	}
 	}
 
@@ -78,6 +62,7 @@
 	}
 
 	h3 {
+		padding-bottom: 0;
 		font-size: 14px;
 	  	@include phablet {
 	    	font-size: 18px;
@@ -92,17 +77,18 @@
 
 	p {
 		@include block-spacing;
-		margin-top: 24px !important;
-		widows: 3;
 	}
 
-	padding-bottom: $spacing-unit*3.5;
+	padding-bottom: $spacing-unit*2;
 
 }
 
 .about-studio-image {
+	@include block-spacing;
+	@include about-containing-block;
 	background: url(/images/studio_shot.jpg) center center;
 	background-size: auto 100%;
+	background-repeat: no-repeat;
 	height: 170px;
 	margin-top: $spacing-unit*2;
   	@include phablet {
@@ -113,9 +99,15 @@
   		height: 226px;
     	margin-top: $spacing-unit * 4.5;
   	}
+  	@include big-desktop {
+  		height: 316px;
+    	margin-top: $spacing-unit * 4.5;
+  	}
 }
 
 .about-header-image {
+	@include block-spacing;
+	@include about-containing-block;
 	display: block;
 	position: relative;
 	background: url(/images/wrench.gif) center center;
@@ -135,11 +127,12 @@
     	margin-top: $spacing-unit * 4.5;
   	}
   	&:hover {
-		.about-header-btn:before {
-			border-left: 108px solid #fff;
-		}
-		.about-header-btn:after {
-			border-left: 98px solid #FF7D7D;
+		.about-header-btn {
+			background-image: url(/images/play_btn_hover.png);
+			background-size: 106px 94px;
+			@include retina {
+				background-image: url(/images/play_btn_hover@2x.png);
+			}
 		}
 	}
 }
@@ -147,28 +140,15 @@
 .about-header-btn {
 	position: absolute;
 	top: 50%; left: 50%;
-	margin-top: -48px;
-	margin-left: -54px;
-	&:before {
-		display: block;
-		content: "";
-		width: 0; 
-		height: 0; 
-		border-top: 48px solid transparent;
-		border-bottom: 48px solid transparent;
-		border-left: 108px solid #979797;
+	width: 106px;
+	height: 94px;
+	background-image: url(/images/play_btn.png);
+	@include retina {
+		background-image: url(/images/play_btn@2x.png);
 	}
-	&:after {
-		position: absolute;
-		top: 4px; left: 3px;
-		display: block;
-		content: "";
-		width: 0; 
-		height: 0; 
-		border-top: 44px solid transparent;
-		border-bottom: 44px solid transparent;
-		border-left: 98px solid white;
-	}
-	
-	
+	background-size: 91px 80px;
+	background-position: center center;
+	background-repeat: no-repeat;
+	margin-top: -53px;
+	margin-left: -47px;	
 }
