updated the vimeo link on the about page

--- a/views/about.jade
+++ b/views/about.jade
@@ -3,7 +3,7 @@ block variables
 	- var body_class = 'about-page'
 block content
 	.about-content
-		a.about-header-image(href="/videos/86731887?portfolio=357398")
+		a.about-header-image(href="/videos/134453476")
 			.about-header-btn
 		.about-header
 			h1 Global Mechanic is a design studio.
