--- a/src/biopolis/css/style.css
+++ b/src/biopolis/css/style.css
@@ -78,6 +78,17 @@ div.title {
   font-style: normal;
 }
 
+@font-face {
+    font-family: 'OpenSans-Light';
+    src: url('../fonts/OpenSans-Light-webfont.eot');
+    src: url('../fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/OpenSans-Light-webfont.woff') format('woff'),
+         url('../fonts/OpenSans-Light-webfont.ttf') format('truetype'),
+         url('../fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -95,6 +106,7 @@ body {
   width: 100%;
   height: 100%;
 
+  overflow: hidden;
 }
 
 /****************************************
@@ -152,15 +164,17 @@ body {
   ==== HOME
 ****************************************/
 
-#biopolis_title {
+.biopolis_writeup_container {
+  max-width: 800px;
+  margin: auto;
+}
+
+.biopolis_title {
 
   width: 225px;
   height: 110px;
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
 
-  background-color: #4da547;
+  background: url('../images/biopolis_title.png') center no-repeat #4da547;
   border-radius: 25px;
   border: 2px solid #eee;
 
@@ -172,23 +186,89 @@ body {
 
 }
 
-#biopolis_writeup {
+.biopolis_writeup {
 
-  background-color: rgba(174,180,122,0.5);
+  background-color: rgba(174,180,122,0.8);
   border-radius: 25px;
   padding: 65px 25px 65px 25px;
   display: block;
+
+  font-family: 'OpenSans-Light';
 
   color: #eee;
 
 }
 
 #chloe_link_btn {
+
   text-decoration: underline;
   cursor: pointer;
+  font-size: 25px;
+
 }
 
-#biopolis_writeup_container {
-  max-width: 800px;
-  margin: auto;
+/***************************************
+  ==== CHARACTER
+****************************************/
+
+#chloe_character {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+
+  overflow: hidden;
 }
+
+/***************************************
+  ==== CELLS
+****************************************/
+
+#cells {
+
+  width: 1920px;
+  height: 1080px;
+  background: #e22;
+  display: inline-block;
+
+}
+
+.cell_layer {
+  position: absolute;
+  width: 3840px;
+  height: 1080px;
+  bottom: 0px;
+  left: 0px;
+}
+
+#cells_trees 
+{
+  background: url('../images/cells_trees.png');
+}
+
+#cells_tube 
+{
+  background: url('../images/cells_tube.png');
+}
+
+#cells_prongs 
+{
+  background: url('../images/cells_prongs.png');
+}
+
+#cells_lattice 
+{
+  background: url('../images/cells_lattice.png');
+}
+
+#cells_prongs_blurred 
+{
+  background: url('../images/cells_prongs_blurred.png');
+}
+
