--- a/public/bungusland/css/style.css
+++ b/public/bungusland/css/style.css
@@ -269,7 +269,9 @@ body {
 ******************************************/
 
 .intro_writeup {
-  display: inline-flex; 
+  display: flex;
+  display: -webkit-flex;
+  display: -ms-flex;
 }
 
 /*****************************************
