--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,15 +27,14 @@ html
         .address
           div.logo--footer(itemprop='name') Global Mechanic
           div(itemtype='http://schema.org/PostalAddress', itemscope='', itemprop='address')
-            div(itemprop='streetAddress') 300-341 Water Street
-            div 3rd Floor
+            div(itemprop='streetAddress') Suite 208 - 1525 west 8th Avenue
             div
               span(itemprop='addressLocality') Vancouver &nbsp;
               span(itemprop='addressRegion') BC &nbsp;
               
             div
               span(itemprop='addressCountry') Canada &nbsp;
-              span(itemprop='postalCode') V6B 1B8
+              span(itemprop='postalCode') V6J 1T5
         .contact
           div(itemprop='telephone') +1 (604) 733 7475 
           div(itemprop='email')
