Human logo removed from footer

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,7 @@ html
           h2.tagline Making unusual &amp; beautiful things since 2000&nbsp;
           a(href="/about") more&hellip;
     .content
-      block content   
+      block content
     .footer
       div.footer-content(itemscope='', itemtype='http://schema.org/LocalBusiness')
         .address
@@ -31,12 +31,12 @@ html
             div
               span(itemprop='addressLocality') Vancouver &nbsp;
               span(itemprop='addressRegion') BC &nbsp;
-              
+
             div
               span(itemprop='addressCountry') Canada &nbsp;
               span(itemprop='postalCode') V6J 1T5
         .contact
-          div(itemprop='telephone') +1 (604) 733 7475 
+          div(itemprop='telephone') +1 (604) 733 7475
           div(itemprop='email')
             a(href='mailto:studio@globalmechanic.com') studio@globalmechanic.com
           div Liz Laine Reps | USA +1 (312) 329 1111
@@ -48,9 +48,8 @@ html
           a(href='https://medium.com/@brucewgalcock',target='_blank').social-link.social-link--medium Medium
           //- a(href='https://www.pinterest.com/brucealcock7',target='_blank').social-link.social-link--pinterest Pinterest
         .other-companies
-          p We're part of a group of companies:
-          div 
-            a(href='http://ishuman.co').human-logo HUMAN
+          p Please visit our sister company:
+          div
             a(href='http://quiniwine.com').quini-logo Quini
     script(type='text/javascript').
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
