--- a/src-public/styles/background.scss
+++ b/src-public/styles/background.scss
@@ -1,5 +1,17 @@
+.video-background-overlay {
+  position: fixed;
 
-.video-background-container {
+  top: 0px;
+  left: 0px;
+
+  width: 100%;
+  height: 100%;
+
+  z-index: -99;
+
+  background: url(../assets/overlay-texture.png) repeat;
+}
+.video-background {
   position: fixed;
 
   top: 50%;
