--- a/src-public/styles/main.scss
+++ b/src-public/styles/main.scss
@@ -1,28 +1,14 @@
 @import './background';
 @import './navigation';
+@import './pages';
 @import './fonts';
 
-.splash-title {
-  h1 {
-    padding-top: 25vh;
-    font-size: 17vw;
-    text-align: center;
-  }
-  height: 100vh;
+html {
+  overflow: hidden;
+  height: 100%;
 }
 
-.header-line {
-  max-width: 1300px;
-
-  h1,h2,h3,h4,h5,h6 {
-    line-height: 0.9;
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-}
-
-.body-line {
-  max-width: 1200px;
-  font-size: 12px;
-  margin-top: 2%;
+body {
+  height: 100%;
+  overflow: auto;
 }
