--- a/src-client/styles/main.scss
+++ b/src-client/styles/main.scss
@@ -1,6 +1,6 @@
 @import './background';
 @import './navigation';
-@import './dynamic-grid';
+@import './freewall';
 @import './pages';
 @import './fonts';
 
