--- a/src-client/styles/freewall.scss
+++ b/src-client/styles/freewall.scss
@@ -1,10 +1,10 @@
-.dynamic-grid {
+.freewall {
   background-color: rgba(255,255,255,0.25);
   position: relative;
   height: 100%;
 }
 
-.dynamic-cell {
+.freewall-block {
   position: absolute;
   top: 0px;
   left: 0px;
