--- a/src-client/styles/bootstrap-customize.scss
+++ b/src-client/styles/bootstrap-customize.scss
@@ -5,7 +5,7 @@ $text-color: white;
 
 $font-family-sans-serif: Helvetica, Arial, sans-serif;
 $font-size-base:         32px;
-$font-size-small:        ceil(($font-size-base * 0.25)); // ~12px
+$font-size-small:        ceil(($font-size-base * 0.35));
 
 $border-radius-base:        0px !default;
 $border-radius-large:       0px !default;
