Vimeo integration complete
Portfolios can now be selected and their containing videos fill the
freewall.

Next it’s making the video page work.

--- a/src-client/styles/freewall.scss
+++ b/src-client/styles/freewall.scss
@@ -5,8 +5,9 @@
 }
 
 .freewall-block {
-  position: absolute;
-  top: 0px;
-  left: 0px;
   display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto auto;
+
 }
