Changed the overlay darkening to be a background color

--- a/src-client/styles/background.scss
+++ b/src-client/styles/background.scss
@@ -10,7 +10,9 @@
   z-index: -99;
 
   background: url(../assets/overlay-texture.png) repeat;
+  background-color: rgba(0,0,0,0.0);
 }
+
 .video-background {
   position: fixed;
 
